--- a/sass/_base.scss
+++ b/sass/_base.scss
@@ -2,6 +2,7 @@
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
   --color-primary-dark: #ba265d;
+  --color-primary-dark-2: #eb4582;
 
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
