--- a/css/style.comp.css
+++ b/css/style.comp.css
@@ -2,6 +2,7 @@
   --color-primary: #eb2f64;
   --color-primary-light: #ff3366;
   --color-primary-dark: #ba265d;
+  --color-primary-dark-2: #eb4582;
   --color-grey-light-1: #faf9f9;
   --color-grey-light-2: #f4f2f2;
   --color-grey-light-3: #f0eeee;
@@ -197,6 +198,66 @@ body {
     height: 3.75rem;
     border-radius: 50%;
     margin-right: 1rem; }
+  .user-nav__user {
+    position: relative; }
+  .user-nav__user:hover .user-popup {
+    visibility: visible; }
+
+.message-icon {
+  position: relative; }
+
+.message-popup {
+  background-color: #fff;
+  position: absolute;
+  top: 100%;
+  right: -80%;
+  padding: 3rem;
+  width: 30vw;
+  box-shadow: var(--shadow-dark);
+  border-radius: 5px;
+  z-index: 50;
+  visibility: hidden; }
+  .message-popup__title {
+    color: var(--color-grey-dark-1);
+    font-size: 2.5rem;
+    margin-bottom: 1.5rem; }
+  .message-popup__list {
+    display: flex;
+    align-items: center;
+    border-bottom: var(--line);
+    padding: 1rem 0; }
+  .message-popup__photo {
+    height: 5rem;
+    border-radius: 50%;
+    margin-right: 1.5rem;
+    flex: 0 0 10%; }
+  .message-popup__text {
+    flex: 1;
+    font-size: 1.3rem; }
+  .message-popup__name {
+    font-size: 1.8rem;
+    font-weight: 700; }
+
+.messsge-icon:hover .message-popup {
+  visibility: visible; }
+
+.user-popup {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  width: 100%;
+  padding: 2.5rem;
+  background-color: var(--color-grey-light-2);
+  visibility: hidden; }
+  .user-popup__list {
+    font-size: 1.5rem;
+    list-style: none;
+    transition: color 0.2s, transform 0.2s; }
+    .user-popup__list:not(:last-child) {
+      margin-bottom: 1rem; }
+    .user-popup__list:hover {
+      color: var(--color-primary);
+      transform: scale(1.1); }
 
 .side-nav {
   font-size: 1.4rem;
@@ -272,9 +333,23 @@ body {
 
 .gallery {
   display: flex; }
+  .gallery__item {
+    position: relative; }
   .gallery__photo {
     width: 100%;
     display: block; }
+  .gallery__item:hover .gallery__caption {
+    color: var(--color-primary-dark-2); }
+  .gallery__caption {
+    font-size: 2.5rem;
+    font-weight: 700;
+    position: absolute;
+    top: 30%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    color: transparent;
+    width: 70%; }
 
 .overview {
   display: flex;
